--- a/public/style.css
+++ b/public/style.css
@@ -58,6 +58,15 @@ h1 {
   font-size: 52px;
 }
 
+.slide{
+    display: flex;
+    display: none;
+    background-size: cover;
+    background-position: center;
+}
+.slide.active{
+    display: flex;
+}
 
 .account-page{
     background: radial-gradient(#fff,#cfe603);
@@ -121,7 +130,12 @@ form a{
     font-size: 12px;
 }
 
+.offer{
+    background-color: #ceb4e0;
+    margin-top: 80px;
+    padding: 30px 0px;
 
+}
 
 
 /* Singin  Sing Up*/
@@ -272,7 +286,23 @@ form a{
     margin-right: 150px;;
 }
 
-
+.col-2{
+    flex-basis: 50%;
+    min-width: 300px;
+}
+.col-2{
+    max-width: 100%;
+    padding: 50px 0;
+}
+.col-2 h1{
+    font-size: 50px;
+    line-height: 50px;
+    margin:80px;
+}
+.col-2 h2{
+    margin: 80px ;
+    flex: content;
+}
 .col-3{
     flex-basis: 30%;
     text-align: center;
